/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package csheets.ext.search.ui;

import csheets.core.Value;
import csheets.ext.search.SearchController;
import csheets.ext.search.SearchExtension;
import csheets.framework.search.SearchResultDTO;
import csheets.ui.ctrl.UIController;
import java.awt.Color;
import java.awt.event.KeyAdapter;
import java.awt.event.KeyEvent;
import java.awt.event.MouseAdapter;
import java.awt.event.MouseEvent;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.regex.PatternSyntaxException;
import javax.swing.DefaultListModel;
import javax.swing.JOptionPane;
import javax.swing.JPanel;
import javax.swing.ListSelectionModel;

/**
 *
 * @author Rúben Teixeira 1140780@isep.ipp.pt
 */
public class SearchPanel extends JPanel {

	/**
	 * The SearchController
	 */
	private final SearchController searchController = new SearchController();

	private Map<String, Value.Type> types = new HashMap<>();

	private boolean formulas = false;

	private boolean comments = false;

	private SearchToolsPanel searchTools;

	/**
	 * The UIController
	 */
	private final UIController uiController;

	/**
	 * The Results list Model
	 */
	private final DefaultListModel resultsModel = new DefaultListModel();

	/**
	 * Helper flag: If true, search box will be cleared otherwise it wont
	 */
	private boolean firstClick = true;

	/**
	 * Creates new form SearchPanel
	 *
	 * @param controller The UI
	 */
	public SearchPanel(UIController controller) {
		searchTools = new SearchToolsPanel(this);
		setName(SearchExtension.NAME);
		this.uiController = controller;
		initComponents();
	}

	/**
	 * This method is called from within the constructor to initialize the form.
	 * WARNING: Do NOT modify this code. The content of this method is always
	 * regenerated by the Form Editor.
	 */
	@SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        jPanelTop = new javax.swing.JPanel();
        jSearchTextField = new javax.swing.JTextField();
        jSearchButton = new javax.swing.JButton();
        jStatusLabel = new javax.swing.JLabel();
        jSearchToolsButton = new javax.swing.JButton();
        btnSearchReplace = new javax.swing.JButton();
        jPanelBottom = new javax.swing.JPanel();
        jScrollPane2 = new javax.swing.JScrollPane();
        jResultsList = new javax.swing.JList();

        jSearchTextField.setText("Type a search pattern...");

        jSearchButton.setText("Search");
        jSearchButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                jSearchButtonActionPerformed(evt);
            }
        });

        jStatusLabel.setText(" ");

        jSearchToolsButton.setText("Search Tools");
        jSearchToolsButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                jSearchToolsButtonActionPerformed(evt);
            }
        });

        btnSearchReplace.setText("Search and Replace");
        btnSearchReplace.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btnSearchReplaceActionPerformed(evt);
            }
        });

        javax.swing.GroupLayout jPanelTopLayout = new javax.swing.GroupLayout(jPanelTop);
        jPanelTop.setLayout(jPanelTopLayout);
        jPanelTopLayout.setHorizontalGroup(
            jPanelTopLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanelTopLayout.createSequentialGroup()
                .addContainerGap()
                .addGroup(jPanelTopLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(btnSearchReplace, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                    .addGroup(jPanelTopLayout.createSequentialGroup()
                        .addComponent(jSearchToolsButton)
                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                        .addComponent(jStatusLabel))
                    .addGroup(jPanelTopLayout.createSequentialGroup()
                        .addComponent(jSearchTextField, javax.swing.GroupLayout.DEFAULT_SIZE, 177, Short.MAX_VALUE)
                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                        .addComponent(jSearchButton)))
                .addContainerGap())
        );
        jPanelTopLayout.setVerticalGroup(
            jPanelTopLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanelTopLayout.createSequentialGroup()
                .addContainerGap()
                .addComponent(btnSearchReplace)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                .addGroup(jPanelTopLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(jSearchTextField, javax.swing.GroupLayout.PREFERRED_SIZE, 23, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(jSearchButton, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                .addGroup(jPanelTopLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(jSearchToolsButton)
                    .addComponent(jStatusLabel))
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
        );

        jSearchTextField.addMouseListener(new MouseAdapter(){
            @Override
            public void mouseClicked(MouseEvent e){
                if (firstClick) {
                    jSearchTextField.setText("");
                    firstClick = false;
                }
            }
        });
        jSearchTextField.addKeyListener(new KeyAdapter() {
            @Override
            public void keyReleased(KeyEvent evt) {
                if(evt.getKeyCode() == KeyEvent.VK_ENTER) {
                    if (!jSearchTextField.getText().isEmpty()) {
                        performSearch();
                    }
                }
            }
        });

        jResultsList.addMouseListener(new java.awt.event.MouseAdapter() {
            public void mouseClicked(java.awt.event.MouseEvent evt) {
                jResultsListMouseClicked(evt);
            }
        });
        jScrollPane2.setViewportView(jResultsList);

        javax.swing.GroupLayout jPanelBottomLayout = new javax.swing.GroupLayout(jPanelBottom);
        jPanelBottom.setLayout(jPanelBottomLayout);
        jPanelBottomLayout.setHorizontalGroup(
            jPanelBottomLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanelBottomLayout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jScrollPane2, javax.swing.GroupLayout.PREFERRED_SIZE, 0, Short.MAX_VALUE)
                .addContainerGap())
        );
        jPanelBottomLayout.setVerticalGroup(
            jPanelBottomLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(jPanelBottomLayout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jScrollPane2, javax.swing.GroupLayout.DEFAULT_SIZE, 347, Short.MAX_VALUE)
                .addContainerGap())
        );

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(this);
        this.setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addComponent(jPanelTop, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
            .addComponent(jPanelBottom, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addComponent(jPanelTop, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(jPanelBottom, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                .addContainerGap())
        );
    }// </editor-fold>//GEN-END:initComponents

    private void jSearchButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jSearchButtonActionPerformed
		performSearch();

    }//GEN-LAST:event_jSearchButtonActionPerformed

    private void jResultsListMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jResultsListMouseClicked
		try {
			SearchResultDTO cell = (SearchResultDTO) jResultsList.
				getSelectedValue();
			String cellAddress = cell.getCell();
			int row = Integer.parseInt(cellAddress.substring(1)) - 1;
			int column = cellAddress.charAt(0) - 'A';

			if (!uiController.getActiveWorkbook().getParentFileName().
				equals(cell.getWorkBook())) {
				JOptionPane.
					showMessageDialog(this, "This cell is in a different workbook.");
				return;
			}

			if (!uiController.getActiveSpreadsheet().getTitle().trim().
				replaceAll("\\s+", " ").equals(cell.getSpreadSheet())) {
				JOptionPane.
					showMessageDialog(this, "This cell is in a different spreadsheet.");
				return;
			}

			uiController.focusOwner.changeSelection(row, column, false, false);
		} catch (NullPointerException ex) {
		}
    }//GEN-LAST:event_jResultsListMouseClicked

    private void jSearchToolsButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jSearchToolsButtonActionPerformed
		searchTools.setVisible(true);
		searchTools.setLocationRelativeTo(this);
    }//GEN-LAST:event_jSearchToolsButtonActionPerformed

    private void btnSearchReplaceActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnSearchReplaceActionPerformed
		new SearchReplaceUI(uiController).run();
    }//GEN-LAST:event_btnSearchReplaceActionPerformed

	public void setAdvancedSearch(Map<String, Value.Type> types,
								  boolean formulas, boolean comments) {
		this.types = types;
		this.formulas = formulas;
		this.comments = comments;
	}

	private void performSearch() {
		resultsModel.clear();
		jStatusLabel.setText("Searching...");
		jStatusLabel.setForeground(Color.BLACK);
		String searchstring = jSearchTextField.getText();

		try {

			List<SearchResultDTO> results = searchController.
				searchWorkBook(uiController.workbooks(), searchstring, types,
							   formulas, comments);
			int found = results.size();
			jStatusLabel.setText(found + " search results");
			if (found > 0) {

				results.stream().
					forEach((result) -> {
						resultsModel.addElement(result);
					});
				jResultsList.setModel(resultsModel);
				jResultsList.
					setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
			}

		} catch (PatternSyntaxException ex) {
			jStatusLabel.setText("Invalid pattern syntax!");
			jStatusLabel.setForeground(Color.RED);
		}
	}

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton btnSearchReplace;
    private javax.swing.JPanel jPanelBottom;
    private javax.swing.JPanel jPanelTop;
    private javax.swing.JList jResultsList;
    private javax.swing.JScrollPane jScrollPane2;
    private javax.swing.JButton jSearchButton;
    private javax.swing.JTextField jSearchTextField;
    private javax.swing.JButton jSearchToolsButton;
    private javax.swing.JLabel jStatusLabel;
    // End of variables declaration//GEN-END:variables
}
